# Trabalho02_CG

./: .gitignore  README.md
CG/: 0__README__0.txt  CMakeLists.txt  linux.workspace  windows.workspace
CG/data/texturedObj/: plane.mtl
CG/deprecated/: glcShader.cpp  glcShader.h  glcWavefrontObject.cpp  glcWavefrontObject.h  glm.cpp  glm.h  phong.cpp
CG/shaders/: brick.frag  brick.vert  cloud.frag  cloud.vert  granite.frag  marble.frag  metal.frag  phong.frag  phong.vert  simple.frag  sun.frag  toon.frag  toon.vert  wood.frag
CG/shared/: glcFPSViewer.cpp  glcFPSViewer.h  glcMouse.cpp  glcMouse.h  glcPoint.cpp  glcPoint.h  glcShader.cpp  glcShader.h  glcSound.cpp  glcSound.h  glcText.cpp  glcText.h  glcTexture.cpp  glcTexture.h  glcWavefrontObject.cpp  glcWavefrontObject.h
CG/src/: 00_README.txt  00_cleanup.sh  01_baseProject.cbp  3DView.cbp  3DView.cpp  SpotlightExample.cbp  SpotlightExample.cpp  TextureMapping.cbp  TextureMapping.cpp  antialiasing.cbp  antialiasing.cpp  display  display.h  extra.h  gravidade.h  keyboard.h  lighting.cbp  lighting.cpp  lightingAtenuacao.cbp  lightingAttenuation.cpp  lightingTwoLight.cpp  lightingTwoLights.cbp  mouseKeyboard.cbp  mouseKeyboard.cpp  objViewer.cbp  objViewer.cpp  objViewerTextured.cbp  objViewerTextured.cpp  openglVersion.cbp  openglVersion.cpp  phong.cbp  phong.cpp  polygonTwoSide.cbp  polygonTwoSide.cpp  projection.cbp  projection.cpp  quad (cópia).cbp  quad.cbp  quad.cpp  quad.depend  (+31 more)
CG/src/include/: AbstractGeom.h  Esfera.h  plano.h
CG/src/src/: AbstractGeom.cpp  Esfera.cpp  plano.cpp
